--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ easyy.py
 output_poly_label.jpg
 Paddle.py
 testeasy.py
+PP-OCRv4_server_det
+PP-OCRv5_server_det
+PP-OCRv4_mobile_rec
+PP-OCRv5_mobile_rec
